install( FILES system_tests.py
    DESTINATION share/miind/examples )

set(TESTFILES_BASE_DIR share/miind/examples/testfiles)

ADD_SUBDIRECTORY(1)
ADD_SUBDIRECTORY(2)
ADD_SUBDIRECTORY(3)
ADD_SUBDIRECTORY(4)
ADD_SUBDIRECTORY(5)
ADD_SUBDIRECTORY(6)
ADD_SUBDIRECTORY(7)
ADD_SUBDIRECTORY(8)
ADD_SUBDIRECTORY(9)
ADD_SUBDIRECTORY(10)
ADD_SUBDIRECTORY(11)
ADD_SUBDIRECTORY(12)
ADD_SUBDIRECTORY(13)
ADD_SUBDIRECTORY(14)
ADD_SUBDIRECTORY(15)
ADD_SUBDIRECTORY(16)
ADD_SUBDIRECTORY(17)
ADD_SUBDIRECTORY(18)
ADD_SUBDIRECTORY(19)
ADD_SUBDIRECTORY(20)
ADD_SUBDIRECTORY(21)
ADD_SUBDIRECTORY(22)
ADD_SUBDIRECTORY(23)
ADD_SUBDIRECTORY(24)

